<resources>
    <string name="app_name">Sport</string>


    <string name="f_name">First Name</string>
    <string name="l_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="c_password">Confirm Password</string>
    <string name="phone">Phone Number</string>
    <string name="date_birth">Date Of Birth</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="Register">Register</string>
    <string name="user_image">Select Your Picture</string>
    <string name="team_name">Team Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="fName_required">First name is required !</string>
    <string name="lname_required">Last name is required !</string>
    <string name="teamName_required">Team name is required !</string>
    <string name="email_required">Email is required !</string>
    <string name="password_required">Password is required !</string>
    <string name="c_password_required">Confirm Password is required !</string>
    <string name="date_required">Date of birth is required !</string>
    <string name="phone_required">Phone Number is required !</string>
    <string name="pass_less_8">Your password is less than 8 character !</string>
    <string name="password_not_match">Password and Confirm password does not match !</string>
    <string name="phone_incorrect">Please Put Your Phone Number Correctly !</string>
    <string name="choose_governorate">Please Choose governorate</string>
    <string name="select_image">Please put Your Picture !</string>
    <string name="sign_in">Sign In</string>
    <string name="login">Login</string>
    <string name="forget_pass">Forget Password?</string>
    <string name="dont_have_account">Don\'t have an account ?</string>
    <string name="sign_in_already">If you have account already ?</string>
    <string name="login_successful">Login Successfull</string>
    <string name="something_wrong">Something was wrong</string>
    <string name="user_exist">User Exist !</string>
    <string name="email_exist">This account already exist !</string>
    <string name="profile">My Profile</string>
    <string name="playgrouond">Playground</string>
    <string name="find_team">Find Team</string>
    <string name="my_team">My Team</string>
    <string name="home">Home</string>
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>
    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>
    <string name="or">OR</string>
    <string name="login_by">Login by</string>
    <string name="profile_team_name">Team Name</string>
    <string name="profile_email">Email</string>
    <string name="profile_governorate">Governorate</string>
    <string name="profile_date">Date of Birth</string>
    <string name="profile_phone">Phone Number</string>
    <string name="my_detail">my detail</string>


    <string-array name="governorate">
        <item>select governorate ...</item>
        <item>Amman</item>
        <item>Irbid</item>
        <item>Balqa</item>
        <item>Jarash</item>
        <item>Zarqa</item>
        <item>Tafila</item>
        <item>Ajloun</item>
        <item>Aqaba</item>
        <item>Karak</item>
        <item>Madaba</item>
        <item>Maan</item>
        <item>Mafraq</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
