<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".View.ProfileFragment">
    <ProgressBar
        android:id="@+id/profile_progress_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="visible"
        android:indeterminateDrawable="@drawable/progress"

        />
    <!-- before  finish design set layout height in constraint layout as wrap content -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_profile"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_user_image"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginTop="16dp"
            android:background="@color/pf_white"
            android:padding="7dp"
            android:scaleType="centerCrop"
            android:src="@drawable/add_picture"
            app:civ_border_color="#000000"
            app:civ_border_width="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/profile_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="User Name"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/profile_user_image"
            app:layout_constraintHorizontal_bias="0.487"
            app:layout_constraintStart_toStartOf="@+id/profile_user_image"
            app:layout_constraintTop_toBottomOf="@+id/profile_user_image" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@android:color/darker_gray"
            android:padding="3dp"
            android:text="Professional"
            android:textColor="@color/pf_white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/profile_username"
            app:layout_constraintStart_toStartOf="@+id/profile_username"
            app:layout_constraintTop_toBottomOf="@+id/profile_username" />



        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/profile_edit_floating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:backgroundTint="@color/colorAccent"
            android:clickable="true"
            android:elevation="20dp"
            android:src="@drawable/edit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            app:srcCompat="@android:color/transparent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_detail"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toStartOf="@+id/imageView"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginStart="120dp"
            android:layout_marginEnd="120dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:srcCompat="@color/colorAccent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3">

            <TextView
                android:id="@+id/textView7"
                style="@style/Text_Profile_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_team_name"
                android:textSize="20sp"
                android:textStyle="" />

            <TextView
                android:id="@+id/profile_team_name"
                style="@style/Text_Profile_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="Al-nasr" />

            <TextView
                android:id="@+id/textView8"
                style="@style/Text_Profile_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_email"
                android:textStyle="" />

            <TextView
                android:id="@+id/profile_email"
                style="@style/Text_Profile_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="Malekalkalony@gmail.com" />

            <TextView
                android:id="@+id/textView9"
                style="@style/Text_Profile_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_governorate"
                android:textStyle=""

              />

            <TextView
                android:id="@+id/profile_governorate"
                style="@style/Text_Profile_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Amman"
                android:layout_marginBottom="8dp"
                />

            <TextView
                android:id="@+id/textView10"
                style="@style/Text_Profile_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_date"
                android:textStyle=""
               />

            <TextView
                android:id="@+id/profile_date"
                style="@style/Text_Profile_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="20/8/1994"
                android:layout_marginBottom="8dp"
                />


            <TextView
                android:id="@+id/textView11"
                style="@style/Text_Profile_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_phone"
                android:textStyle=""
             />

            <TextView
                android:id="@+id/profile_phone"
                style="@style/Text_Profile_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0786144883"
                tools:layout_editor_absoluteX="153dp"
                tools:layout_editor_absoluteY="572dp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout></layout>